--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-cookie": "^1.0.0",
     "koa-route": "^3.2.0",
     "koa-session2": "^1.0.8",
+    "koa-static": "^2.1.0",
     "mongoose": "^4.8.4",
     "radium": "^0.18.1",
     "react": "^15.4.2",
